@@ -3,7 +3,6 @@ package net.sourceforge.cruisecontrol.dashboard.widgets;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 
@@ -35,7 +34,7 @@ public class ErrorsAndWarningsMessagesWidget implements Widget {
         return new SAXBasedExtractor[] {new BuildMessageExtractor(), new StackTraceExtractor()};
     }
 
-    ErrorsAndWarningsMessagesWidget(SAXBasedExtractor extractor) {
+    ErrorsAndWarningsMessagesWidget(final SAXBasedExtractor extractor) {
         this.extractor = extractor;
     }
 
@@ -43,10 +42,10 @@ public class ErrorsAndWarningsMessagesWidget implements Widget {
         return "Errors and Warnings";
     }
 
-    public Object getOutput(Map parameters) {
+    public Object getOutput(final Map parameters) {
         try {
             parseLogfile(parameters);
-            HashMap props = new HashMap();
+            final HashMap props = new HashMap();
             extractor.report(props);
             return parseMessage(props);
 
@@ -55,44 +54,43 @@ public class ErrorsAndWarningsMessagesWidget implements Widget {
         }
     }
 
-    private void parseLogfile(Map parameters) throws ParserConfigurationException, SAXException, IOException {
-        SAXParser saxParser = SAXParserFactory.newInstance().newSAXParser();
-        LogFile logFile = (LogFile) parameters.get(Widget.PARAM_BUILD_LOG_FILE);
+    private void parseLogfile(final Map parameters) throws ParserConfigurationException, SAXException, IOException {
+        final SAXParser saxParser = SAXParserFactory.newInstance().newSAXParser();
+        final LogFile logFile = (LogFile) parameters.get(Widget.PARAM_BUILD_LOG_FILE);
         saxParser.parse(logFile.getInputStream(), extractor);
     }
 
-    private String parseMessage(Map props) {
-        String replaced = buildError(props, HTML_TEMPLATE_START);
-        replaced = errorsAndWarnings((List) props.get(BuildMessageExtractor.KEY_MESSAGES), replaced);
+    private String parseMessage(final Map props) {
+        String replaced = buildError(props);
+        replaced = errorsAndWarnings((List<BuildMessage>) props.get(BuildMessageExtractor.KEY_MESSAGES), replaced);
         replaced = stacktrace(props, replaced);
         return replaced + "</div>";
     }
 
-    private String errorsAndWarnings(List messages, String currentHtml) {
-        StringBuffer sb = new StringBuffer();
-        for (Iterator iter = messages.iterator(); iter.hasNext();) {
-            BuildMessage message = (BuildMessage) iter.next();
-            MessageLevel level = message.getLevel();
+    private String errorsAndWarnings(final List<BuildMessage> messages, final String currentHtml) {
+        final StringBuffer sb = new StringBuffer();
+        for (final BuildMessage message : messages) {
+            final MessageLevel level = message.getLevel();
             if (MessageLevel.WARN.equals(level) || MessageLevel.ERROR.equals(level)) {
-                sb.append(message.getMessage()).append("<br/>");
+                sb.append(message.getMessage()).append("\n"); // RHT 08/05/2008 was <br/>
             }
         }
-        String error = StringUtils.defaultIfEmpty(sb.toString(), "No errors or warnings");
+        final String error = StringUtils.defaultIfEmpty(sb.toString(), "No errors or warnings");
 
-        String errorsAndWarningsHtml = StringUtils.replace(ERRORS_AND_WARNINGS_HTML, "$errors",
+        final String errorsAndWarningsHtml = StringUtils.replace(ERRORS_AND_WARNINGS_HTML, "$errors",
                 StringEscapeUtils.escapeHtml(error));
-        boolean hasErrorsOrWarnings = !StringUtils.isEmpty(sb.toString());
-        return currentHtml + makeToggleable(errorsAndWarningsHtml, "errors_and_warnings_element", hasErrorsOrWarnings);
+        final boolean hasErrorsOrWarnings = !StringUtils.isEmpty(sb.toString());
+        return currentHtml + makeToggleable(errorsAndWarningsHtml, hasErrorsOrWarnings);
     }
 
-    private String makeToggleable(String htmlSnippet, String element, boolean shouldToggle) {
-        String className = shouldToggle
+    private String makeToggleable(final String htmlSnippet, final boolean shouldToggle) {
+        final String className = shouldToggle
                ? "class=\"collapsible_title title_message_collapsed\""
                : "";
-        String style = shouldToggle
+        final String style = shouldToggle
                 ? "style='display:none;'"
                 : "";
-        String nextElementClassName = shouldToggle
+        final String nextElementClassName = shouldToggle
         ? "class='collapsible_content'"
                 : "";
         String newSnippet = htmlSnippet;
@@ -102,20 +100,20 @@ public class ErrorsAndWarningsMessagesWidget implements Widget {
         return newSnippet;
     }
 
-    private String stacktrace(Map props, String currentHtml) {
-        boolean hasStacktrace = !StringUtils.isEmpty(props.get(StackTraceExtractor.KEY_STACKTRACE).toString());
-        String stacktrace = StringUtils.replace(STACKTRACE_HTML, "$stacktrace",
+    private String stacktrace(final Map props, final String currentHtml) {
+        final boolean hasStacktrace = !StringUtils.isEmpty(props.get(StackTraceExtractor.KEY_STACKTRACE).toString());
+        final String stacktrace = StringUtils.replace(STACKTRACE_HTML, "$stacktrace",
                 getMessage(props, StackTraceExtractor.KEY_STACKTRACE, "No stacktrace"));
-        return currentHtml + makeToggleable(stacktrace, "stacktrace", hasStacktrace);
+        return currentHtml + makeToggleable(stacktrace, hasStacktrace);
     }
 
-    private String buildError(Map props, String currentHtml) {
-        String buildErrorMessage = StringUtils.replace(BUILD_ERROR_MESSAGE_HTML, "$buildError",
+    private String buildError(final Map props) {
+        final String buildErrorMessage = StringUtils.replace(BUILD_ERROR_MESSAGE_HTML, "$buildError",
                 getMessage(props, StackTraceExtractor.KEY_ERROR, "No error message"));
-        return currentHtml + buildErrorMessage;
+        return ErrorsAndWarningsMessagesWidget.HTML_TEMPLATE_START + buildErrorMessage;
     }
 
-    private String getMessage(Map props, String key, String defaultMsg) {
+    private String getMessage(final Map props, final String key, final String defaultMsg) {
         return StringUtils.defaultIfEmpty(props.get(key).toString(), defaultMsg);
     }
 
